--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -12,6 +12,7 @@ import { YoutubeVideo } from '../components/YoutubeVideo'
 export default styled(withSidebar(<SidebarHiring />))``
 
 <!-- Hero-->
+<!-- trigger rebuild 2 -->
 
 <Scene perspective="800px" height="500px">
   <SpinningText
